src/bootstrap/test/v0_6/rejects/01_unmet_bound/main.zg
# requires: v0.6

spec Tagged {
    fn tag() -> str
}

struct Cat { name: str }

fn need_tag[T: Tagged](x: T) -> str {
    return x.tag()
}

let c := Cat { name: "Mittens" }
print need_tag(c)
